--- a/regex_app/templates/regex_app/confirm.html
+++ b/regex_app/templates/regex_app/confirm.html
@@ -10,10 +10,10 @@
 <body>
     <h1>確認してね</h1>
 
-    <p>Name:{{ name }}</p>
-    <p>Age:{{ age }}</p>
-    <p>Zip code:{{ zip_code }}</p>
-    <p>Cell code:{{ cell_phone }}</p>
+    <p>{{ form_data.name }}</p>
+    <p>{{ form_data.age }}</p>
+    <p>{{ form_data.zip_code }}</p>
+    <p>{{ form_data.cell_phone }}</p>
 
     <p><a href="{% url 'regex_app:index' %}">戻る</a></p>
 </body>
